noinst_HEADERS= AbstractComChannel.hh \
            AbstractInterp4Command.hh \
            AbstractMobileObj.hh \
            AbstractScene.hh \
            ComChannel.hh \
            Configuration.hh \
            geomVector.hh \
            Interp4Move.hh \
            Interp4Pause.hh \
            Interp4Rotate.hh \
            Interp4Set.hh \
            Interpreter.hh \
            LibInterface.hh \
            MobileObj.hh \
            Port.hh \
            preprocessor.hh \
            Scene.hh \
            Vector3D.hh \
            xmlinterp.hh 


